--- a/templates/base.html
+++ b/templates/base.html
@@ -32,13 +32,20 @@
     <title>Brainfood {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top"></header>
-
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
 
     {% block page_header %}
+      <header class="container-fluid fixed-top">
+        <div class="row">
+          <div class="col-12 col-lg-4 text-center my-auto text-lg-left py-1 px-0 bg-color-h">
+            <a href="{% url 'home' %}" class="nav-link main-logo-link">
+              <h2 class="m-0 header-color  display-1">Brainfood</h2>
+            </a>
+          </div>
+        </div>
+      </header>
     {% endblock %}
 
     {% block content %}
