--- a/templates/base.html
+++ b/templates/base.html
@@ -34,75 +34,86 @@
     <title>Brainfood {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
+    <header class="container-fluid fixed-top">
+      <div class="row">
+        <div class="col-12 col-lg-4 text-center my-auto text-lg-left py-1 px-0">
+          <a href="{% url 'home' %}" class="nav-link">
+            <h2 class="m-0 header-color display-1 logo">Brainfood</h2>
+          </a>
+        </div>
+        <div class="col-12 col-lg-4 my-0 py-4 px-2">
+          <form method="GET" action="">
+            <div class="input-group w-100">
+              <input class="form-control" type="text" name="q" placeholder="Find your favourite food!">
+              <div class="input-group-append">
+                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                  <span class="icon">
+                    <i class="fas fa-search header-color"></i>
+                  </span>
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="col-12 col-lg-4 my-0 py-4 px-2">
+          <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+            <li class="list-inline-item dropdown">
+              <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class="text-center">
+                  <div><i class="fas fa-user fa-lg header-color"></i></div>
+                  <p class="my-0 header-color">My Account</p>
+                </div>
+              </a>
+              <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                {% if request.user.is_authenticated %}
+                {% if request.user.is_superuser %}
+                  <a href="" class="dropdown-item">Product Management</a>
+                {% endif %}
+                  <a href="" class="dropdown-item">My Profile</a>
+                  <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                {% else %}
+                  <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                  <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                {% endif %}
+              </div>
+            </li>
+            <li class="list-inline-item">
+              <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                <div class="text-center">
+                  <div><i class="fas fa-shopping-bag fa-lg header-color"></i></div>
+                  <p class="my-0 header-color">
+                    {% if grand_total %}
+                      ${{ grand_total|floatformat:2 }}
+                    {% else %}
+                     $0.00
+                    {% endif %}
+                  </p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row text-white">
+        <nav class="navbar navbar-expand-lg navbar-light w-100">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            {% include 'includes/mob-header.html' %}
+            {% include 'includes/main-nav.html' %}
+        </nav>
+    </div>
+    <div id="delivery-banner" class="row text-center">
+        <div class="col text-white">
+            <h4 class="logo-font my-1">Free delivery on orders over $50!</h4>                
+        </div>            
+    </div>
+    </header>
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
 
     {% block page_header %}
-      <header class="container-fluid fixed-top">
-        <div class="row">
-          <div class="col-12 col-lg-4 text-center my-auto text-lg-left py-1 px-0">
-            <a href="{% url 'home' %}" class="nav-link">
-              <h2 class="m-0 header-color display-1 logo">Brainfood</h2>
-            </a>
-          </div>
-          <div class="col-12 col-lg-4 my-0 py-4 px-2">
-            <form method="GET" action="">
-              <div class="input-group w-100">
-                <input class="form-control" type="text" name="q" placeholder="Find your favourite food!">
-                <div class="input-group-append">
-                  <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                    <span class="icon">
-                      <i class="fas fa-search header-color"></i>
-                    </span>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="col-12 col-lg-4 my-0 py-4 px-2">
-            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-              <li class="list-inline-item dropdown">
-                <a class="nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <div class="text-center">
-                    <div><i class="fas fa-user fa-lg header-color"></i></div>
-                    <p class="my-0 header-color">My Account</p>
-                  </div>
-                </a>
-                <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                  {% if request.user.is_authenticated %}
-                  {% if request.user.is_superuser %}
-                    <a href="" class="dropdown-item">Product Management</a>
-                  {% endif %}
-                    <a href="" class="dropdown-item">My Profile</a>
-                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                  {% else %}
-                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                  {% endif %}
-                </div>
-              </li>
-              <li class="list-inline-item">
-                <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                  <div class="text-center">
-                    <div><i class="fas fa-shopping-bag fa-lg header-color"></i></div>
-                    <p class="my-0 header-color">
-                      {% if grand_total %}
-                        ${{ grand_total|floatformat:2 }}
-                      {% else %}
-                       $0.00
-                      {% endif %}
-                    </p>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </header>
-    {% endblock %}
-
-    {% block extra_page_header %}
     {% endblock %}
 
     {% block content %}
