Added menu_items app and created category and meneitems models

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,9 +10,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col">
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-lg-7">
                 <h1 class="heading-font home-message">
                     Feeling hungry? Why not order now?
                 </h1>
