--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,17 @@ body{
     font-family: 'Lobster', cursive;
 }
 
+.header-row{
+    max-height: 82px;
+}
+
+#main-nav-col{
+    text-align: center;
+    padding-left: 30%;
+    padding-right: 30%;
+    font-size: x-large;
+}
+
 .header-color{
     color: white !important;
 }
@@ -48,6 +59,7 @@ body{
     color: rgb(7, 7, 7);
 }
 
+
 /* Media Queries */
 
 @media (min-width: 992px) {
@@ -60,6 +72,6 @@ body{
     }
 
     .header-container {
-        padding-top: 164px;
+        padding-top: 200px;
     }
 }
