--- a/templates/base.html
+++ b/templates/base.html
@@ -93,9 +93,9 @@
             </li>
           </ul>
         </div>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
       </div>
-      <div class="row text-white header-row">
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
+      <div class="row header-row">
         <div class="col" id="main-nav-col">  
           <nav class="navbar navbar-expand-lg navbar-light w-100">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
