--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,15 +10,15 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
+    <div class="container h-100 home-container">
         <div class="row h-100">
-            <div class="col-lg-7">
+            <div class="col-lg-4">
                 <h1 class="heading-font home-message">
                     Feeling hungry? Why not order now?
                 </h1>
                 <div class="my-5">
                     <h4>
-                        <a href="" class="menu-button btn">View Menu</a>
+                        <a href="{% url 'all_items' %}" class="menu-button btn">View Menu</a>
                     </h4>
                 </div>
             </div>
