--- a/templates/base.html
+++ b/templates/base.html
@@ -34,14 +34,14 @@
     <title>Brainfood {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top">
+    <header class="container-fluid">
       <div id="topnav" class="row header-row pt-lg-2 d-none d-lg-flex">
         <div class="col-12 col-lg-4 text-center my-auto text-lg-left py-1 px-0">
           <a href="{% url 'home' %}" class="nav-link">
             <h2 class="m-0 header-color display-2 logo">Brainfood</h2>
           </a>
         </div>
-        <div class="col-12 col-lg-4 my-0 py-4 px-2">
+        <div class="col-12 col-lg-4 my-0 py-4 px-2 searchbar">
           <form method="GET" action="">
             <div class="input-group w-100">
               <input class="form-control" type="text" name="q" placeholder="Find your favourite food!">
@@ -96,7 +96,7 @@
       </div>
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
       <div class="row header-row">
-        <div class="col" id="main-nav-col">  
+        <div class="col-md-4 offset-md-4" id="main-nav-col">  
           <nav class="navbar navbar-expand-lg navbar-light w-100">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon text-white"></span>
@@ -108,15 +108,14 @@
     </div>
     </header>
     {% if messages %}
-        <div class="message-container"></div>
     {% endif %}
 
     {% block page_header %}
     {% endblock %}
-
-    {% block content %}
-    {% endblock %}
-  
+    <main>
+      {% block content %}
+      {% endblock %}
+    </main>
     {% block postloadjs %}
     {% endblock %}
   </body>
