--- a/menu_items/templates/menu_items/item_detail.html
+++ b/menu_items/templates/menu_items/item_detail.html
@@ -17,16 +17,16 @@
             <div class="image-container my-5">
                 {% if menu_item.image %}
                 <a href="{{ menu_item.image.url }}" target="_blank">
-                    <img class="card-img-top img-fluid menu-img" src="{{ menu_item.image.url }}" alt="{{ menu_item.name }}">
+                    <img class="img-fluid" src="{{ menu_item.image.url }}" alt="{{ menu_item.name }}">
                 </a>
                 {% else %}
-                <a href="">
-                    <img class="card-img-top img-fluid menu-img" src="{{ MEDIA_URL }}noimage.png" alt="{{ menu_item.name }}">
+                <a href="{{ menu_item.image.url }}" target="_blank">
+                    <img class="img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ menu_item.name }}">
                 </a>
                 {% endif %}
             </div>
         </div>
-        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <div class="col-12 col-md-6 col-lg-4">
             <div class="details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ menu_item.name }}</p>
                 <p class="mb-0">${{ menu_item.price }}</p>
