Add search functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
           </a>
         </div>
         <div class="col-12 col-lg-4 my-0 py-4 px-2 searchbar">
-          <form method="GET" action="">
+          <form method="GET" action="{% url 'all_items' %}">
             <div class="input-group w-100">
               <input class="form-control" type="text" name="q" placeholder="Find your favourite food!">
               <div class="input-group-append">
