Added contexts, added a table to the shopping bag

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -22,7 +22,7 @@ body{
 }
 
 #main-nav-col{
-    font-size: x-large;
+    font-size: large;
     background-color: rgb(17, 17, 17);
     padding-left: 5%;
     padding-right: 5%;
