--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -47,7 +47,19 @@
                                         <p class="my-0">${{ item.menu_item.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
-                                        <p class="my-0">{{ item.quantity }}</p>
+                                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
+                                            {% csrf_token %}
+                                            <div class="form-group">
+                                                <div class="input-group">
+                                                    <input class="form-control form-control-sm qty_input" type="number"
+                                                        name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                        data-item_id="{{ item.item_id }}"
+                                                        id="id_qty_{{ item.item_id }}">
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <a class="update-link btn add-more-btn"><small>Update</small></a>
+                                        <a class="remove-item float-right btn add-bag-btn" id="remove_{{ item.item_id }}"><small>Remove</small></a>
                                     </td>
                                     <td class="py-3">
                                         <p class="my-0">${{ item.menu_item.price }}</p>
@@ -86,7 +98,7 @@
                     </div>
                 {% else %}
                 <p class="lead mb-5">Nothing to see here.</p>
-                <a href="{% url 'all_items' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                <a href="{% url 'all_items' %}" class="btn rounded-0 btn-lg">
                     <span class="icon">
                         <i class="fas fa-chevron-left"></i>
                     </span>
@@ -96,4 +108,28 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken};
+
+        $.post(url, data)
+         .done(function() {
+             location.reload();
+         });
+    })
+</script>
 {% endblock %}
