--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -87,7 +87,7 @@
                                         </span>
                                         <span class="text-uppercase">Back to Menu</span>
                                     </a>
-                                    <a href="" class="btn add-bag-btn rounded-0 btn-lg">
+                                    <a href="{% url 'checkout' %}" class="btn add-bag-btn rounded-0 btn-lg">
                                         <span class="text-uppercase">Secure Checkout</span>
                                         <span class="icon">
                                             <i class="fas fa-lock"></i>
