--- a/static/css/base.css
+++ b/static/css/base.css
@@ -175,6 +175,13 @@ body{
 	color: orangered /* text-info */
 }
 
+/* profile page */
+
+.order-history {
+    max-height: 416px; /* height of profile form + submit button */
+    overflow-y: auto;
+}
+
 /* Media Queries */
 
 @media (min-width: 992px) {
