--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -15,7 +15,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <a class="btn add-bag-btn rounded-0" href="{% url 'home' %}">Cancel</a>
+  <a class="btn add-more-btn rounded-0" href="{% url 'home' %}">Cancel</a>
   <button type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
