--- a/menu_items/templates/menu_items/item_detail.html
+++ b/menu_items/templates/menu_items/item_detail.html
@@ -31,6 +31,12 @@
                 <p class="mb-0">{{ menu_item.name }}</p>
                 <p class="mb-0">${{ menu_item.price }}</p>
                 <p class="mt-5">{{ menu_item.description }}</p>
+                    {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                        <a href="{% url 'edit_menu_item' menu_item.id %}">Edit</a> | 
+                        <a class="text-danger" href="{% url 'delete_menu_item' menu_item.id %}">Delete</a>
+                        </small>
+                    {% endif %}
                 <form class="form" action="{% url 'add_to_bag' menu_item.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
@@ -38,7 +44,7 @@
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ menu_item.id }}" id="id_qty_{{ menu_item.id }}">
                                 </div>
                             </div>
                         </div>
