--- a/menu_items/templates/menu_items/menu.html
+++ b/menu_items/templates/menu_items/menu.html
@@ -42,6 +42,12 @@
                                         <p class="lead mb-0 text-left font-weight-bold">${{ menu_item.price }}</p>
                                     </div>
                                 </div>
+                                {% if request.user.is_superuser %}
+                                    <small class="ml-3">
+                                        <a href="{% url 'edit_menu_item' menu_item.id %}">Edit</a> | 
+                                        <a class="text-danger" href="{% url 'delete_menu_item' menu_item.id %}">Delete</a>
+                                    </small>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
