--- a/templates/includes/mob-header.html
+++ b/templates/includes/mob-header.html
@@ -11,7 +11,7 @@
               <div class="input-group w-100">
                   <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                   <div class="input-group-append">
-                      <button class="form-control form-control btn border border-black rounded-0" type="submit">
+                      <button class="form-control form-control btn add-bag-btn rounded-0" type="submit">
                           <span class="icon">
                               <i class="fas fa-search"></i>
                           </span>
@@ -31,7 +31,7 @@
       <div class="dropdown-menu border-0" aria-labelledby="user-options">
           {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
-                  <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
+                  <a href="{% url 'add_menu_item' %}" class="dropdown-item">Menu Management</a>
               {% endif %}
               <a href="" class="dropdown-item">My Profile</a>
               <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
