--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0"></div>
       <div class="row header-row">
         <div class="col-md-10 offset-md-1" id="main-nav-col">  
-          <nav class="navbar navbar-expand-lg navbar-light w-100">
+          <nav class="navbar navbar-expand-lg navbar-light w-100 text-white">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon text-white"></span>
               </button>
