--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,4 +1,4 @@
-<div class="collapse navbar-collapse" id="main-nav">
+<div class="collapse navbar-collapse text-white" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto ul-nav py-0 text-center">
         <li class="nav-item dropdown">
             <a class="font-weight-bold nav-link mr-5 text-white" href="{% url 'all_items' %}" id="all-items-link">
