--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@ html{
 
 body{
     font-family: 'Roboto', sans-serif;
-    background: url('/media/home-background.jpg') no-repeat center center fixed;
+    background: url('/media/brainfood images/home-background.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
 }
