--- a/static/css/base.css
+++ b/static/css/base.css
@@ -226,7 +226,7 @@ btn-file {
     }
 
     body {
-        height: calc(100vh - 116px);
+        height: calc(100vh - 50px);
     }
 
     .display-4.logo-font.text-white {
@@ -244,6 +244,10 @@ btn-file {
     .navbar-toggler {
         padding: .6rem .6rem;
         font-size: 1rem;
-        color: white;
+        background-color: white;
+    }
+
+    .nav-list{
+        margin-left: 25%;
     }
 }
