Fixing mobile top header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -248,6 +248,8 @@ btn-file {
     }
 
     .nav-list{
-        margin-left: 25%;
+        margin-left: 15%;
+        padding-top: 0;
+        margin-top: 2px;
     }
 }
