--- a/static/css/base.css
+++ b/static/css/base.css
@@ -222,7 +222,7 @@ btn-file {
 
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 116px;
+        padding-top: 100px;
     }
 
     body {
@@ -248,8 +248,20 @@ btn-file {
     }
 
     .nav-list{
-        margin-left: 15%;
+        padding-left: 1rem;
+        font-size: medium;
+        z-index: 2;
+    }
+
+    .home-container{
         padding-top: 0;
-        margin-top: 2px;
+    }
+
+    .menu-button{
+        min-width: 150px;
+        padding: 15px;
+        font-size: 16px;
+        margin-left: 25%;
+        margin-right: 25%;
     }
 }
