--- a/menu_items/templates/menu_items/add_menu_item.html
+++ b/menu_items/templates/menu_items/add_menu_item.html
@@ -33,8 +33,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'all_items' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Add Menu Item</button>
+                        <a class="btn add-more-btn rounded-0 text-white" href="{% url 'all_items' %}">Cancel</a>
+                        <button class="btn add-bag-btn rounded-0 text-white" type="submit">Add Menu Item</button>
                     </div>
                 </form>
             </div>            
