--- a/menu_items/templates/menu_items/edit_menu_items.html
+++ b/menu_items/templates/menu_items/edit_menu_items.html
@@ -33,8 +33,8 @@
                         {% endif %}
                     {% endfor %}
                     <div class="text-right">
-                        <a class="btn btn-outline-black rounded-0" href="{% url 'all_items' %}">Cancel</a>
-                        <button class="btn btn-black rounded-0" type="submit">Update menu_item</button>
+                        <a class="btn add-more-btn rounded-0" href="{% url 'all_items' %}">Cancel</a>
+                        <button class="btn ad-bag-btn rounded-0" type="submit">Update menu_item</button>
                     </div>
                 </form>
             </div>            
