--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -19,7 +19,7 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <a class="btn add-bag-btn rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+        <a class="btn add-more-btn rounded-0 text-white" href="{% url 'account_login' %}">Back to Login</a>
         <input type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
 
