Fix bug leading to error when trying to edit items

--- a/menu_items/templates/menu_items/edit_menu_items.html
+++ b/menu_items/templates/menu_items/edit_menu_items.html
@@ -34,7 +34,7 @@
                     {% endfor %}
                     <div class="text-right">
                         <a class="btn add-more-btn rounded-0" href="{% url 'all_items' %}">Cancel</a>
-                        <button class="btn ad-bag-btn rounded-0" type="submit">Update menu_item</button>
+                        <button class="btn add-bag-btn rounded-0" type="submit">Update Menu Item</button>
                     </div>
                 </form>
             </div>            
