fix mobile display functionality

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -24,7 +24,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link mr-5 text-white" href="{% url 'all_items' %}" id="all_items-link">
+            <a class="font-weight-bold nav-link mr-5 text-white" data-toggle="dropdown" href="{% url 'all_items' %}" id="all_items-link">
                 Others
             </a>
 
