Add missing {% endif %}

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -201,6 +201,7 @@
                                 
                                 <span class="text-uppercase">Back to Menu</span>
                             </a>
+                        {% endif %}
 			</div>
 		</div>
     </div>
