--- a/templates/base.html
+++ b/templates/base.html
@@ -36,25 +36,11 @@
   </head>
   <body>
     <header class="container-fluid">
-      <div id="topnav" class="row header-row pt-lg-2 d-none d-lg-flex">
+      <div id="topnav" class="row header-row pt-lg-2 d-lg-flex">
         <div class="col-12 col-lg-4 text-center my-auto text-lg-left py-1 px-0">
           <a href="{% url 'home' %}" class="nav-link">
             <h2 class="m-0 header-color display-2 logo">Brainfood</h2>
           </a>
-        </div>
-        <div class="col-12 col-lg-4 my-0 py-4 px-2 searchbar">
-          <form method="GET" action="{% url 'all_items' %}">
-            <div class="input-group w-100">
-              <input class="form-control" type="text" name="q" placeholder="Find your favourite food!">
-              <div class="input-group-append">
-                <button class="form-control btn add-bag-btn border border-black rounded-0" type="submit">
-                  <span class="icon">
-                    <i class="fas fa-search header-color"></i>
-                  </span>
-                </button>
-              </div>
-            </div>
-          </form>
         </div>
         <div class="col-12 col-lg-4 my-0 py-4 px-2">
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
