fix home page layout

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <div class="row h-100">
             <div class="col-lg-4">
                 <h1 class="heading-font home-message">
-                    Feeling hungry? Why not order now?
+                    Feeling hungry? <br> Why not order now? 
                 </h1>
                 <div class="my-5">
                     <h4>
