--- a/static/css/base.css
+++ b/static/css/base.css
@@ -263,7 +263,7 @@ btn-file {
         min-width: 150px;
         padding: 15px;
         font-size: 16px;
-        margin-left: 25%;
-        margin-right: 25%;
+        margin-left: 25px;
+        margin-right: auto;
     }
 }
