--- a/static/css/base.css
+++ b/static/css/base.css
@@ -192,6 +192,8 @@ body{
     color: white;
     margin-top: 10px;
     padding: 20px;
+    max-height: 50px;
+    max-width: 25%;
 }
 
 .btn-file input[type="file"] {
