--- a/static/css/base.css
+++ b/static/css/base.css
@@ -196,6 +196,9 @@ body{
     max-width: 33%;
     margin-left: 33.5%;
     margin-right: 33.5%;
+    font-size: 24px;
+    text-align: center;
+    display: inline-block;
 }
 
 .btn-file input[type="file"] {
